Todo el proyecto es responsive.

--- a/Biblo/GUI/Principal.resx
+++ b/Biblo/GUI/Principal.resx
@@ -184,65 +184,126 @@
   </data>
   <data name="imgUsuario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAA1QSURBVHhe5ZsJ
-        XFV1FsfveywiIIsIgoYaiJSCgIABCSiiIC6piOaOCyECoaIBYpamiIoKroSgaZhLjYZOOpNly6SpuU5u
-        pU5ZTdOoLaY2U1Znzjnv/a/3PS6r+oDmfD7fz3vv3v/93//5/fflSQ/ArJARSBlyGrmG/IZ8j1xAtiJT
-        EEfkD2VmSDpyHYFa8B9kCWKLNHmzR/Yj7FxzGxsIDO0BQ8ckQtL0Z+Dp3OchOTMbBo8cA527BoCNra1S
-        CCoVHkiTNS3CzmvNzKBXvwEwO385PLd8tSpzl62ExKkZEBzWAywtLYUI/0AckCZpiQiYofNjp6SrOm0M
-        iTB68hSIfWIoWFk1FyIUUWRN0Q4iEB4do3OuYCUX+4HDR0JYr94Q8FgodPYLAP/gEOgeHglxQ4dDYmoG
-        pGU/C8OwioRE9BQC3EAskCZnPyAQg7nZNag7WDWXc7RazC0swK2tO3TvEQEajUZc90SanN1EDJyzQOc8
-        PT0hIiIC4uLiYNiwYTBw4ED+7eHhAc2aNTMIr8AbaTLWBtmNcOLNzc0hODgYpk2bBsXFxbBhw4YqWb9+
-        PaSmpoK/v7+xGCcQP6TRWxzyHcLFNzIyEpYuXarqbHWQELm5uRASEsICUnzIL0gG0mgtBfkVARcXF5gz
-        Z46qc3WhsLAQJk2aBG3btlWWhlUIDa4alZHznEAvLy9OuJpD9WHt2rUwY8YM8PPzU4qwGdEgjcKGIzSm
-        h7CwMC6+ao7cC2vWrIGZM2dCeHi4UoQFSIMbdU8/IuDj4wOlpaWqDtwPVq1axQ1pYGCgEOB3ZADSYEb1
-        8AjCdZRyyTjRZWVljPH1+pKfnw8ZGRnQsWNHIcI3iDPSIDYRAa1WCwsWLFBNMHVntjjBKSgoUL1fV0jM
-        7OxsmDp1KtjgxIrej1CjaHJrjnyFQHR0tGpiqTqQOBSGGsaaxgC1paioiKtC3759hQDUPZp8pDgG4Vyg
-        uqmW0JycHJFApkOHDlyE1cLWFYqbqkLr1q1F/MsQk9oBBPr166eaQMp9b29vTlyXTu3Aztaav9NQmEpM
-        fQZHSqhKUSmg91O8yFXEEjGJ0SIHD3jmz59fKXFLlizhHoHuN7eyhNP7VsLRiuXg39lDJJZHiTQniI+P
-        h8zMTFixYkWleKqjpKSEBUhPT2dR9fGGIyaxWAQcHR0NEkW5Tv20GLpaWpjDzhdzAD7fzfxycRdsWJoB
-        AV3uCqGkOc4WW7VqBe7u7tCpUyfu7hISErjOK98joMaQRKBJlD6OHMQkNgvhFl6ZoHnz5snOdPPxhMOv
-        F8jOG/PxX1fBwlljoW94ADg5tJCfU8Pa2hpSUlIM3iXeRwLQfEEf9hXEJLYYgaioKIMEzZ07lxPiYGcD
-        v39Woep4VXxzbDN8tHs5VKyfAzvWZMHq+ckw66kh8LC7rpGjKpOUlGTwvry8PBagT58+QgBafjOJrUa4
-        G1ImSAjgaG+r6mRduXX+VTj/9lqI7xfG8dLSGhV78b5FixaxALGxsUKADxGTWB4CoaGhcmKo/tOsja7f
-        LwGIq8fL4fL767mqUNzOzs4wffp0HlPQ4IsEoMUUuofsQ0xiyQi34uQ85Yqrq6tIBFiYm3HOCSd+PLsd
-        9pQ9Cy8tmwYn9xYaOGjMpfdKoLxwBry2Lpurxc8Xd8JnH5TC317NVy6PgZ2dHQwZMoQFUMwSixGTmC/C
-        o7y0tDS51W9maQFtWrfk776PtIfbWIS3rpoF9i10YwBBn3B/uH5yi4Hj5OhTo2IwzrtOWmC886aPgs8P
-        lkL/qGC+RnG1sL27tti7d28WQ/97PGISo3n4p4g81I3rFQTf/30rJ7alvlXvGeIL5lhv6bvk1BakjkEg
-        men67MjHfODbU1s4Z786vBGenjBQF47ogDnq5in/Dg/uzJ9m+K7ywky4cGAdJCb05mvi/ch/kVaIySwT
-        4ZdTq3/jzDY5N3eXzjEorpqQIaB95QfQbr8F2oXvgmRhxdepqtAn5brIeU3GS7pw226CJj5bjoOYNnEQ
-        VwdBZy935f1yxKRGk6HLCMREdDMozsRM7MLoHqHN/0DnlB5N90HyPYPq4ephEE5bfl0uMY8HPsqNoVKA
-        5NFy6097iQ8jJrepCIR371JJgF8u7QInR11V0Dz7hoFjGp9Ivj5j8mAeL2xePl3niL3L3ZJClF4BSaMr
-        4u9uyzNwnhgXH6V7TpJKkQYxH4SHvMpWX5DQ/3FdAh96BLRLD4N281XQjM1Dp3TF/fRfVnK4m2d3QAsb
-        XcOmiRoP2rIvQbv2E9B00+UwDYaMnaeRpKuzoy5+SRqLNJjtRMCrQxt4a8sL3JoLAUgUMQs0ZkJCtByO
-        KJybpBqO2oYNS5+WHadqsPel5yDYz0uEOY/QuYMGM1eEtrE5QVQaUsb0kx0799Ya7iFEg9e6lQMszk6E
-        O1hFlAIQW4oyWUgKR44Hde0Ib7+yAL74cAM7Pz9zNNhY6xpQQqORvsXPYKTBzQ4pQX5CuAeg7lDpHLUJ
-        yr7/0M4l8GhHd/Bo58pObyzIkO/98PE2rhb0/TdsI0TOO7e0F87TVHwP0h5pVEZFkbawoCB3ouyQGusW
-        psg5SSSN7KsajgZTJMC21bNE2FuIE6I0L4TmJx8gx+6R7UhPpN6WjcBj/p1UHRL8evl1eH/HIthf/gIc
-        2LoQbp3T5bgxNBcgAcYN7SUE2EEvUVgfhEQR9+8HtMcxCKmX0eIkV4Mrh8pUnaot1EVeOVjGxd/FSS7+
-        CfQSvdEZIloKg6D2EuTE6hywsZZwSl03ti8xg+3zLCChp37kKkknkXrbcQSW5CSqOvbpO8WQOq4/j/0F
-        yaNiuSQow4niv6VopkgU5bQ1IozEADd7CW4WaeDYbF336oi/4bM6ck4Lv79nBRfK5R3pO0i9bRrC/TcV
-        daVTxJz0EeIlBtCUVxnum482swA00tSH2YQobSYCT/ihA8X3KMB5nQCXthpsydfbqFegYy3c2CmdIqhb
-        IxGyUuJlcqYO4xUhEebni7vY+T8V5/AkiOJCuiFKy0IgIRAdqEaA43sk7HolyM+qTMFsCb44dP8FIJuN
-        gC3222f3rzEQgKBujtYHXsxLhdLF6fD10U3yPar7Xx/ZBKf2rZSXxJDXKFIjq5UAYXifrldF+vgHIwAd
-        kXsf4Qbs1L4iAwGMR37DB/SQ79E0+dieFcrZHjV0rRFjq5UAO7CRG94fw8VVZuQgCY5WPBgByCjR5xAe
-        61NuCyepVPSPCoLoHn5cx9/YOJdznpzf+eJsaNfGWSSCDlp1R9SsVgLUigckAJkbwjvIxLC4x+GTd9bJ
-        QgjuXN4FZ95cA5NG9FHW+S8R43qvtFoJcOusBMd2q3NqrwR3Lj5YAchohEgrNhyxmZkWRg/uCa+vz0Wn
-        V0MFfk4cHg3WVgYvJ2oa59dKgJgIgzgrkZv24AUgu4SAm4s8hVVFrCnqoS246qxWAjyTLEFLB911Y5xb
-        SvDyigcvAK0h0pF4OFJRwBOhyU/25d0jmt3RpOjJgeG8KfLThdfk5TGkpoPSTaINIAtCeEpMMz3j+m+M
-        t4d8IiyJHq7GmoQAlPvvIjAkJlTVYWPmzxgtEvBPpAVSlTV6Acj5tQjn/vE/r1B12JhrJ8p54YSeQ95G
-        qvrjRKMVgE520+mtvQhHVtXEqCpoXCBWkRCamdGmh3FpaHQCULe1EuEpqoC2wdWcrIl9m5432F9AbiO0
-        /k/nE+iEWqMQgJalchFanJQftsfcs8H+nr7vKpmt6mBN0HqCiM9F7DDd5WuEp90NIQANbCYg7yF0WJEf
-        sMDcisO6+7KvJ1zvFQhj3Frx9emTnlB1sCZoskTP+9haw41eQfBqZ08Y7GAH1ndHioypBaBFiH8hcsBg
-        OxtY5t0erkQEwK3ewTIkBN1v6+rEi6JqTlaH2BLP7OBmEO/pLl4wz8kJvPX/K4oPkGBvmgamRurSY9VM
-        gqwpdWSyBrJGmUPyIIOSVsnobC7fdLa0gKyH28DJUF+DxCn5d89ADkfhacqr5mRVHK1YxvXfDDkW4mMQ
-        76e+3nC4XTtIddD1FBqNnOD7jYHRHxr5xlMPucA1LOLKRFVFnn5KS0vaV0+8rOqsMbRnQHsC9NwILD3G
-        cRoLQNjb2/OJs4kTJ9aLceMTIX74kxDTf4AcJyLbowiv+RsXx5ogobz12160Ja7cOSJHaWXYeEWYNlYo
-        PDWkZ8K6VorTWAA6rHnmzBm4fft2vbn23fdw8sIl2LP/HeE8wUaHD7m1DbG3hRs4hzdOUE2cCPEFW30r
-        TvWaToyQoyWLUvkaLYjSb1o/TBvfn6/hCAp2+HmpxicESNMLQIek1JyqC9UJwOeBWlSRG7VlT4A32OoH
-        Np7tXXkFOD9rPP+mTVTaR+whDkJgvV+OjapaPMTngV1YAGoIKTydSL1586aqY7Xl2rd6Ad48wHEi1Lvx
-        yUs+ETobJygfowD3wlas16IkEGKtn06UiJMk5Hy+VzvV5wWnsSpVuD8EG11dwRzD03MTJkyAgwcPclWo
-        D4eOHGXnk1J0pRKhEzDSJ/of/4/wn7Po2JnazT8qVOwp59F5SfM/0pSMIgXBvpgAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAAA2CAYAAAB3Ep8CAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
+        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAACxMAAAsTAQCanBgAABtxSURBVGhD5Xp3dFNXvvVJmJk3
+        Ly+TvLw37c1kEkrARZKtYsmSLfcqN9y7LclNsuXewBTTTDFgejPFENM7obcQICShw6MbMMWYXkzHDob9
+        /c4lZvDEM0DWt94/aK29rnR17jl37189V2IAfoaiMH8WL7NmBo30n6Kj6/6vkeHmJBxzAr19sv19Ps/R
+        +bE3RdscL9+0YePCWhYns2J6tV2HxF/FP177f4k+seHMEuD5viXA2zo72DeoICqkU0FkCPtnyCdkBfmw
+        rMAXaJun3aQcw7LSWIx9D2Z0VjCDk/y1+MfrObICPDtZdB6d8kL8WVGo7t/StQ7/leGi/KRPYvSv8kN1
+        75k9nT5Od3b4JN1V9VGGp9Ovs3Tev8709/h12/WpWuWvMrTKTjk69/denbcN2X6uvy2NCv4kU+chzfB2
+        9soO8f33wthQVhDds0MUxoSy7J7+bHx5GZs0pJxNGtz/5VztJuYIt+7K0lw1LNVF/Uagse8XhQb+pigs
+        +Dd5IboPzP4+H6a5O3Uyebsyk48XywnW/aagp+4P+SH+v++TlNApPyKE5QR4f1QYEvjHwrCgP2b5ef6J
+        8HFWkDczBXqzTJ33ezlBfv9RHBr0YVF4yAd5YYEf5IYF/iorwJd/xzI8XVi6t9t/mAO8upr83f6c4aNl
+        JIBAsiPyHJk096yqkezS5SvsQsMlQsNLvu3Ic8Ta2xAxxzdGmquaFYboWAEhu2cwM+n8RMlK2TyDVpNt
+        8vb4OMPDlVl0viyX3K5vciLLCw1kFn8vlkuEcoP8WKaPO8GDZQZ4slQil+HtzrIDfVlJaBAroLF8fIaX
+        K8GdZfh4iBOV8ooUV6fCzGAdM+s8WYaviyAAJ5ofRa7+KiKDWXaojtWMHcUaGi+zs2fr2alTpwS08W1H
+        niPGzoqlaJVvDC5CfnAAJSJ/lqXzeT9V6zg7yc4aCfa2SFBIf8hw03plBvizdA93lhccSNdoWIqnGzO6
+        OjO9huZwJm9z0jCjk4rpndXM4KJlqSRajp8XkfNkJm8SxkXzn0Zn9ZB4qfiu3t6mNdFe9Cjdy83VEkxr
+        kogcmUG+dGyPdD8P1i9VT5bn5M+y06dPv14AvUbFsvy83wo5QYGEILJo4EfxcumJIo0EWw0qmJQixNqJ
+        75AXmDkRA5E00Pypnu7/VACjqytLomOySs7SyTPMvt5d9CrZ+jArK1SHq7C6VzLiJCKQIMWpPiSOl8c/
+        hd5Vy0riYtiFixfZmTNn3kwAky/FoT/F29vAz+cFfL06x9hL7pdrJXhSpsaBTDUSyRNiJTZI0aiGpro4
+        /Y4E+O9UdxeJUasJ0asdUo0ax4IUtWOxQe1g0TupYo1aZ9dkJ8cuJNbvUj1cZAaV/HCErQ0qPMVoqfBA
+        w8ZaJCsdkKSUTzISQYOLc4fg38UqZGzH5k3s3Pnzby6A2d/7F8Pk6ymPtRc9G+5qh0vZKqBCg/nRDuAE
+        EqUiEJldeoX98QR78Y8JdrZIthcJ57lISQRybcTZiZAkE98hq+/UyyUXYsU2yHS0Q2O+HKj0w83je2Hy
+        cEOiTDLXqCWPcXbsECQQG5iewk7XnWL19fVv4QHkOr8U6e5uznF2YozxlOJEhgNaB6pxo5cGeU52iBLb
+        IpKE4GLoZWJkOEiINJElATg4eYNcDJNKQh7zYmwMv0YswqoEFZ6XSdA8IRaPbl5Bjr8PEqSiZSkuTr9K
+        oXDpCDESW7Zh2VJ2+do1gfwbC5Aol/1yKOQkgAjjvGTYlyjHw76OwCA1pocqEC4SYYiPDGuTlLhYrMGq
+        eAWiiWCbANFEtNhZgguFauw3O6ImTIEMEiNJJsHFQg1aS2zQPL8UT540I9fXE3qlbH1uoO4DC4Xeq8gm
+        8EQ7qiBPiH2e/N5KgBQ3518ILUt2dJDFkgAj3e3xTYQcd3upcLVUjZlEZo9JhZZyDZ4PUAND1NiQJCfr
+        /l2AKBKgxNkOD/qQaOQ5GKjBdbp2AYXQVoMDnpSI0fr9QjTdf4QMJyXlFOWKLJ1vp+wgf5YTQlXoJ2QH
+        6VhuzyC2fslidvHSpZfk31iAvKjQX4gwlu6qHRhFMdubqsDX4TLcLHbEhWJngQgn9Yg84n6ZI57T+3WJ
+        ig4FaOrtiMf9HPGQhHjan1Cuxuk8R9wskuP5ga9w5sw5RFt15XnilF6r6WHh/UcY1fufwPuDfulG1njl
+        ikD4rQXIpsbjbZFDC5t83AvI+s95XM/RSXG9QEVEOGk1mokQt2wb2gTgeSGOkiE/virAk7bxJNYjOgqf
+        ezng0UA33Pt2Mcb36Yuwzn9FklyyPyvY//OciJ4sJ5w6TEImeUF/LgDV/rq6OoF0G+jzeydOnOB4ybcd
+        eQ5zAGX0t4WXW2C8veg+z+Sz/GW4ksfdXS1YkeMJWZ5bspXAxeDewAUIsrahZChCXzc7hNjYoohyABeg
+        hcb82P/FeH7kIjwkIR+USNEy2A3N9fsxtrSERPgLjBrlxsxA//80B/oxM4WDSUe5gETYuWkTu3X7Nmug
+        tvcShQIHvf8NoRM/18a3HXmODgn+a/xRr5TW8Vo/3kuKI0aK159uuoVcuIW84EK+CnvSFdidpsCZXCWe
+        DdJgDQmQpRLjSJYS92jMjBApSrViPCCxmno54pBZie9SFTiSqcQd+szFeEwi3M+3wdNZJjy+34S+sVGI
+        6Po3GJ3UZane1PxQG51GRz01WbyJOnbgAHv05Am7TUL8hPeampoYRxvfduQ5SM03B7XAqW7OY6JE1ujn
+        YoeNoTJczleimQTgFr9cpML8SCnmUkJcT0mPJ75ayg3zImTYmeKAW0TsGSXFlp/Gn8hWYi1Vh5k9pVgR
+        J8cWg5yqhRyzesqwg4Tl8z4uc8D9Yjvg3B6cPVmHZMofCRLba2lebt3SfD1YGu0t0ukYR53kgimTWEvr
+        M8ETbt26JaBNjDa+7chzUGZ9M9BmhnZ+XRMV9o16mQjzAqTYTwR5kvuRLN9A5KcFS3HYrMCtQntcKHLA
+        NSIMsv7xHCWm0ndnKVR+7OuAh0SIe8tqIrs0hsonzx2Ei5REG/NluFYgx5IoOdYkyIWQeFgoQvPCPnS7
+        wJeVlQinfGBwdhxgpErEO0COFDcXFusgY0uqq9m9Bw/eQgDagLwJLNT5pbs6ZVLD8bycrH/IoMSFghdu
+        yrP47DASJF1KllagOjMBeZ5OSJPbYpSvPS4XKNBQ6IhpOhHuDg/Cs1oLdhlkWEQknw90xMYEexQ6SZAi
+        F6EiNgzzU3U4ZRJjfoQUB8zUYPVXCVXh4eoqNNQdQaqjArFi65N6J+cPCKwN8Q5K2lkGCi7f5gWvFSCd
+        Nipvggwvz/eMatWcOIk1kZKhyl9BN0jt6mA1TlGcLwyTYL3eERuWLseuzVvRJz4GkTY9EGorRj9fDbm/
+        CuvCuuLAl1XA8weojdHgEgmzyahCokqFMKvu1O8rUDN8OA7uO4T5fSzYFCfC8lhaoz950/BwjAjRYnFZ
+        BkqD/RFj3e15kqNKTWAvoVKycBtrNnfcONZK3G7evPl6AVJoZ/ZGcHb6JNlBtjlZJj5CNbkl3NYWa6Jk
+        eEyxvIrid1OUFZaWpqCFJp09dDBCPvsz4kTdkeFMxJcsx4ZMHxw1dMeCUUOx74e9WGDwwul0uqZqGGYN
+        H4bQz/6Hk4LBQYorFy/i5OEjWBVhgwXkBWfNtmhdUILKHAuCP/8UeoXd+WSF/cVEpTyLwF5FtETEiiPC
+        2NmTJ9m9+/dfL4CR9uFvBH/v3+ndtdIMDxfPeJn4aSq565JgGZZEyjCC3Hy/UYzl6f64fOUmju/5HtE9
+        ugoi1FQMpGWApX2ycDCpG8bnmjFv6gwsStBiU7Q1Th07gcsXzsOkVcPv9x+jIiUZT58DG76cjf16G8wK
+        lWKSRxccmDUC86pGIvKLzkiU29US2S/iHZXdCexVJKhVLLBrF7Z11Sr2uLn59QKkUmf1RggNYEbKtmYv
+        FwVtTJ6n0UZmVU857lEd/4E2QluT5TiaZova4UPwuKUVpw7sw94tG2kJoP58IxaYQrA5/HNsXbYMT589
+        w/zMCPrcBStmVOMpjbnZ2IgdK5fj/t17OHLkJObEuaAhT44F4VI0FYjwdO8yzJ0wEZHdPkOSwn5egqMD
+        ZX4VQdkOsUoHFmzVnX2/bRt73NLyegFMQX6vBzUdJv6Ux8eLdoCunybyJzW0w1sQQGUwV4W7ZWpMpbp+
+        u7cK25PFmFWWj++2bMXhvQexcfFizEoNQV1ad8yI1uLU8RO0LDBv9Ah8G9cd25KlmFfRHz9s+4bGH8C6
+        2lrUJHriTrE9NiVTjoiT4OkgZ+DOOVQPGoSIbn9Dkko+PsFZw5L4wxV3V5bC4eEuIN3XjxndPdjkQUMo
+        BB6wh48fswePHr7k2448hyXQ942Q6eVJ5F2EByK0z9/NG6FpPlLsiZGgtUyK75NtMSfICs195LicI8I3
+        yXZC97fPaIsbOVZYFmqF2nHj0UrW56/Tp05jbFII6tO64YLZCl+TEHz8oRQRHveyw1GTPWb4W+Fudjc8
+        m1cASmoYmBiL6O6dkeqiSeYPctLctSybSnQmR0CAgILIGFYUHc+yAnuyodl5bERBkQDOlaMdeY4sIvc6
+        cAGyfLzeM2rVmmQXl8JYuexkhMgGA1zssUPvgQsjkvFwTgHWlZswJdYTh9Lt0ZgrQUO2Df7XaI2aaA1q
+        Rlai6c4dWvLvr73ffocqYzQ2kpXPmqyppRbhvMUOqxMUmJAWjdMTc9E0NQOtjcdx9tgxGBR2iLDujjiV
+        43yDq1touofrp1wA6k+YWccfmupYXngUy4+IFmAJDmWWIAIdaTkB7chzdET4H0EC/NXgpJ4dbye6V+hI
+        vbyrhDoyW8RQR7hp+kScP3Map0+ewt5vtqK6ogKl4SEYmRiOyRYjZg4px45Nm9HczOsD0PLkCZ48eoRn
+        z7hNgfP19VgyYyamleQS6Vj0C9NhsMmEtXNrcfzgQZypO4OL585hdG42enbrjHyNGAPdxbBQWx0rkx42
+        eXlEZQbQvqADAV4FLSWgHXkOC8V4G7Io1i2EduSD/X+b7KT6Ks3eBuujpLhVYI8HRWLUmcUYoO0Bo4cX
+        9mzfhiN7dmNt7WysnD4VlRYzJvXvh2MHD6Op6S4tA+z7egsGkAv3DgtGSc9A9I4IwcyB5fixpRmU9HHx
+        YgPWL1mKgUYD5o4eiZUzpmHHmtU4V3eKNkK9EGfVGWtjxLhTIMbjEjvcKFRQy2yPGDtxc5qPp6c5IPCX
+        CVASHi6gMCKU5YYGs/zgIKHrM1H3x5/+mr09QxPtRa2rw+zQWirBj8P90TxFj2dje+JhqT3KlZ+iODoa
+        pw4dxNWGi9i/7WtsW74MI8ypWDJhHO43NdEy1MIOH4qgv/xBqPUcYV3+ihTq6Jpu3xS+P7b7BwwxJmHh
+        uCr8sHE96g4dwLXGBiyZNgWxNH5XvBUwzBUtkxLQPD4GT6k7fFpmjyo/O0QrFNsy/HzfN+v8//8KkNsz
+        hKV6ePTp7WCNqxZ7tK4dhdarZ/G8+SFabzcC39eiodgZ6eLO1MwMR9Otm+TaL5Lc7WvXUGlOQ6HOF2Py
+        slEU5I/wLp8i1uYLJNrZIJx2dXqZBJWmNAwl4rk+nvhm2RLhWv76sbkZR3d/jwxPN9R4/426KxNazx/E
+        s0f38OzBLbQc3wFMjMZBSrKJMrtrVKE+ySaDdUSeg6YU0I48R0cCZNMe2+TjrqXk4h4jVxyc7t4NrRsn
+        0vAOXnVbMZN2hSGd/4bh6SlYNnkiFo8bQw3QIJTHR0HvYIey2AhMHdAHc0YNR9+4SGRoHTGxTylqKoei
+        MtuETC9XmF00mNK7BLUjhmPF1MnkMRUwu2uR3P0vuDElk5LH/Z8WfOV14xxuDQuBxb7rM4OLS6/sQJ1n
+        fljEH/LDIll+eCTLi4hiBYR8Ao0W0I48xz8KUBASzLL8vYLiRT3uRItsWgsVX6B+YCTw7EUSa3vdv3YJ
+        Tx9RfD9vQVV8MGJseyCDSGS4qJHr743hmWlY+eVMHD1yABcuncOlKw249bAJy2dNQ1GITjjXSHM00Pmz
+        9aew6+uNmDa4P8qiw5BJxNNJpFRCsvVnOL1+vrDm3Yt1eNbK26a/v57vW461UTaIt7N9ykMrReOwKlfn
+        92EONW/ZYYGsJLInKybQUAHtyHO8KkBeWAjLCwyQxoutLpfr42F0d0e1O7nf3rk09DlaH/y9jO1ZNhcj
+        YgIxyZQEo6McNZMm4PChfTh+9ABOnzmJS1cb0Hi9EecvnsUZInim/iQuNp7H2KJcIQf8sGMrzjfU09gT
+        OHuuDg2XL+Dy9cvCuZMnDtM8B/ENJc7i6CgUeTmhutCEyalRtPKL6sFfPzZdB57ew/VBfjCIuqA8RY80
+        jQPSnByrckPJk99GgKLIMJYXGvxZrG2Po0Uh/jhx8igmVAxFpvWfcHD+OOz/ahHm987E3auXcLP+BCoi
+        dUh3c0EFlacFc2bjZP1pXL9zHVdvX8PlG1cEQufJyucbzgnEr9y8IhAtCtYh5NM/YdnMqbh5/w4uXjqP
+        CzSGE+fvG6814sqta8JcjTcu45sd2zF20ACUJSdAL7HCjpoJuH/zGvavWYZ5xeloPPIDpkQ6I9VZjb37
+        92AFeVgUNUsZ3m65uRHBrxegNCKClUZG8h3UR9RjbzYqpfhu22Yi0Yi9e3ejorAAKWoHZHtqkUY7O4uT
+        HGaVHfJDg7F27TrsPvy/OFF3AseO7Mf29V9hcfUkzKDaP644HyMpvistGRhfko/ZI4cKMW+g+aN7kLWo
+        JC6cMgFT+vfG6LwsYVwVHSf364UvqyqxduFc7PtuO+rqjuHQ8WPYuWcfxg0eTLtFCfLdlEhT2sPi7Q6T
+        swKZATospr7h7IUzgueNpbXDu332xOzvGVUaQwaO+heNUC7/pZf6/DStZnKc9RdYOXu6MMnpM8cF1z14
+        +ADWrFyBFbSJWUmYOX4sFs6pwc5vd2LDVyuowxuKwSlJtJtzRDxtf6OIHP+l2EiipZFVOOHILz6n7e6f
+        XzzelopAW2rEia2EqsC3wfx9qpNKGJ9M2+EYmxfz6OUSFFO+mNCrEEtmVuPbnduxYd1azKJ7mD+7BqtX
+        r8ayxYuwnfqQk6dPCOHEQ+7EiSMopT6DKs4Ni5+3ykKdYhvfduQ5LAF+nVK16vIYurnZZKFbD5ooMV0U
+        khR33cbrlwS3vkQJ63R9Hfbt3oWFUycIyUogTOT0dNO94qIwtrwfaqdNw+J5c7F04UIsXbAAi+fPw+zJ
+        kzAg1YBkIiT8Lsif64mtke3rgYmDBwohtHT+fCxbuEC4ZsHs2ageMwpDsszIJCvHkmGiu38uiDyutABb
+        1qzAcSJ5jkLm8s2rFDJXKcm+uGceStfv3sCRQ3th8XRBvETEu8VubXx/JoDZzzM8QWLTmiixxvjehdi6
+        ejn2fPsNDuzZhb3f78D2Dauxas4MKmNlQvfGazi3pNnDBUNzLJhD5JbTjm8RkZ46cgQqcrLQV5+AXjGR
+        oLAihKI3vR9E9T6PeoEE/l8CmsOokqO/IQn9CCVRfFxPlESGoywhBgPSDBjTtwxfVk/D8iVLsJh2iJNI
+        qJLoCNBOlNbvArObBiOo0iyYUIWNyxdTUt2C/XTP+3d/i52b1wm5IE/nLYiXolGub+P7MwEyvFwz+I8b
+        /EkMt2YMuR7fdKRpFNSpyQV3jSdxDCoZCijuR5f1xryZM+jGFpOlajCFGqDK4gIMzcvBmD69MXnYUAqT
+        cZgzdQq+nDaVrD8Rk4cOQTkRTdUoX3oAR26AL0b3KsHMsWMwhzq+2p/GV1MrPIHa5MriQgyjJmpsvz6Y
+        PWkiedUiLCHPqq4ahf4pBpioXPJ754IaqN9IUyuQSvfMP0d0/RQJdN964qJXSve28f2ZANmB/jZklduD
+        yUK1pPg4cuORJUXC4lX9yjBt1EjBEovnzRPck1t8/KBywUKThgxGzcQJwvfTRldiVGkxbWTS0CcxTrBk
+        7/ho9IqNRO+4F1bNC/ATPIiDl86+yXGCF/SKiaIQihauKUuIJXLJGJZrEUTg69VWT0U13cc42l/wdatp
+        Z7noyzkkyALMr6nBzAkTMHHIQGH9yqICMlKpMH4WteI8t6RoHCva+P5MgOLYqPcphrebPbT4auVKbN1B
+        yW3TJny1ahWWLlooWHvmuLFk6aFk3Qo6DsP0sVWC1cYN7I8B6UbBdUuiwzEoI1XwgmmVw4VENYPGTR0x
+        jKxcjFIKA+72nDz/RYnD4uOBikwTJlKZm05WFa4ZU4UJ5O7DC3JRlhQnhFBZfAwqC/MF4rPIu6pHVWIK
+        3Qv3LG6g2VMnYRFVgRXLlmLN+nXYuGULtu36jsTqjTibL1oyPDw82vj+TIDcntT5+Xrp+YOGQdTKbtyy
+        FWvXr8cqEoBPuIxcfRnFOE9s3EP4gtwDRpeVYXx5fyI4QhBj+uhRGD+gP+WFLMGShaFByAnwIav7ooh2
+        gNyyVI4El0ygrJ9JOYR7Chcun3qDXJ0PHf1RGhWOcvIWHhqc5Iu5Rwpkq0jcsf37YtLQCrLueKpGlDwp
+        JHgO4rli5fLlVBm+wsatWzF3xnQkKyQ8Qe80+3p/2Mb35wIEB7K8kKAPqNbv5AmjqqwX1m/cKEyyaevX
+        AtZv2CjE/PyaWaihGJ1GlhhD43hmz6cylU79AY/pONvuraT4TTpeoPirS7CzPRYvsTkba9P9CZ2jfPKi
+        BPK45SWOOk5hpxcv7nGV8swJwnEqifWxtl9cpvEPuVAGqvdZXm4URlFCPpg0ZBCJMhZzp1dT7Z8rlMJN
+        W17c5ya6581ffy14g8XH/UWy9PGI4j+jt/FtR56jICyMFYZHkBBBCipT5+OoBpdEhmE4dXjcDYdkmYQ4
+        LSYrZtKNGFVSKn896Ma7IlbU/Rpl5V1JDtLaZJW8jBJltFGtUhm1ms5mL4/fm7zcP0zzdPsfo9YpKNFB
+        OiReJhmWIJNUJMjtKuKl4opkpXREhoc2L9XN2S7FVftxmpvLRyke2r8YnNWiFCdHX4Ojg8mgUY5Lktuv
+        ibezOUlrPuZG4mKna2nPEeiLMhJmIIUezxn8fnm14fuIOBI2zdVpnCXY//3sYN1Lvu3Ic3ABCsLCqQ3u
+        SSXRW2JwVEyKse2+h/r1MzHWXeujrbrV06KnY2167ImX2K5MUkjH6jXKHKOzxpuO1qmuzv9tcOV/VNIw
+        g1LGjGolMzqrmYn/mOLpxtLcXYS/wSVqVCxObs/iFVIBsTI7ZtA6Mr5pSXV1YikuziyN/8TlTnM5OTIj
+        jU+hOdP53+bcXH+bolV/RsIqUp2d4vQOsvIEqXhOnNh6G3ncUbrXeupj6vmRvO14gp1oXbqbc4pF5/tv
+        /C91/1KAdw0dnnyX0OHJdwkdnnyX0OHJdwkdnnyX0OHJdwkdnnyX0OHJdwdg/w/Sy+nAlWirFAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="btnConfiguraciones.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
