--- a/Configuraciones/GUI/OpcionesEdicion.resx
+++ b/Configuraciones/GUI/OpcionesEdicion.resx
@@ -118,6 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASsSURBVHhe7ZnP
+        i1dVGMZnUyEVFQ5Y0wgFgdCPXWbttF2KumilboKK/gCRKegfEJtBrXSXfhmhZlLctOsnueqXm2oRVFRr
+        HXRqWZyeZxZfzvve53bOfR26FOeBz+rc93nPw73znfueO9PU1NRU0BPgFPgO/AFSJbyWNSfB42Coxuo7
+        1R3gDPgLqEZD+BO8BW4HJY3V14ib+AQo01vhY/BPmxmrb0dngTLaDN4EfRqrrxH/9szjt/3B2XRxciyt
+        /3YhpbVLVfDay8sLaccjc/kmCB/Lx4BXp+8DW7ak00/vTFcP7ks/PH+wCl779jNPpYfvvivvSfr6dsQf
+        j2khw1//aSJD1rD282TDI/cES8DL9GX4L/c/J0PW8NX+vRseuSdQfTv6HkyLeOdVsCGsnjuab4J8C7xM
+        X955FWwIp3btzHsS1bejdTAtGvLY93Hz1+V8E4Q9vEzfIY99H98c2Jf3JKpvR6ZIBYrgfYGXWVeBInhf
+        UJQpUGEieF/gZdZVmAjeFxRlClSYCN4XeJl1FSaC9wVFmQIVJoL3BV5mXYWJ4H1BUaZAhYngfYGXWVdh
+        InhfUJQpUGEieF/gZdZVmAjeFxRlClSYCN4XeJl1FSaC9wVFmQIVJoL3BV5mXYWJ4H1BUaZAhYngfYGX
+        WVdhInhfUJQpUGEieF/gZdZVmAjeFxS16a/CN34Z51X46wN7856k6lXYDCUcaVWoIay8M3wY4kirQg3h
+        5K4n856kahgyYynneY60KlgN1348n+bntuabIMVxmPM8R1oVrIYvMErfHxyHeZDIw4NpIed5jrSc6lRI
+        Ba/lnRfh6f0o8Or05TzPkZZTnQqp4LW88yJ8X18pHiR6g82CJ719GqtvRzxA/Agoo1vhQ3Ab6NNYfaW4
+        GR4kmscyCD14B2o2MVbfXvEgkT8e/AX9HahGCl7LmkVQ/beXaay+TU1NTUbt6zBQjYbAf0ft6zBoX4fB
+        f+/r8H3bZtPLJ15LS1feT2euflAFr31l8fW07aH5fBOEj2XV1+Hts3emi8f2pPULR1K69EIVvPbywrNp
+        x9w9eU/S17cjM5Yy/IlP35Uha3jjs/c2PHJPUByHGf765JAMWcPa5PCGR+4JqsZhczDBO6+CDeGl46/m
+        myDqYMJ+lcadV8GGsHp0d96TqL4dmaOpIY99H0tXVvNNkOKR2JDHvo+by0fynqTqSMwUqUARvC/wMusq
+        UATvC4oyBSpMBO8LvMy6ChPB+4KiTIEKE8H7Ai+zrsJE8L6gKFOgwkTwvsDLrKswEbwvKMoUqDARvC/w
+        MusqTATvC4oyBSpMBO8LvMy6ChPB+4KiTIEKE8H7Ai+zrsJE8L6gKFOgwkTwvsDLrKswEbwvKMoUqDAR
+        vC/wMusqTATvC4oyBSpMBO8LvMy6ChPB+4KiNv1VePHzlXwD5F95Fb6xfDjvSapehc1QwpFWhRrCi8cX
+        8k2Q4jDEkVaFGsJKcBgyYynneY60KlgNHKXvDYzDnOc50qpgNVw7fyjNb42Nw52vtJznOdJyqlMhFbyW
+        d16Ep3fV12HO8xxpOdWpkApeyzsvwvf1lWpfh0H7Ogza12GofR1uamr6n2pm5m/JmJjNDgRBxwAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
   <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
@@ -579,94 +606,6 @@
         AAEEAwAAAAAAAAAAAAAAAbBAUJCgcIDA/9oACAECAQE/AMu5QGsGTjB3BM9RrFk4we/RJwEsBxF//8QA
         HhEBAAEDBQEAAAAAAAAAAAAAAZAwUKAgQHCAsGD/2gAIAQMBAT8A0knRsDcFAghLgSNEKJQMOMnZMAM5
         IOxJKUdoTjglCIMSwFAz7DDTIMS0HKJDie4webse6yfBf//Z
-</value>
-  </data>
-  <data name="btnBuscarLibro.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        sQAAALEBxi1JjQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANLSURBVEhLtZR7
-        SFNRHMctIiLq34L+abbcXIuo3dueria02t10lJTRzMfW2sYwqt27USlm4h+VQlRWUEH2oLAHlFAJmWEk
-        9I6waKWJlL0bqdWce/06Z50Vtamzxwe+7HLP73zu2eH8TtpooBg3X8Jw1XSu+yFtcPfSei443+B5jX7P
-        UXrOpNFUjiOlo0O8onI8zbh2IVFYvnRLyFh2LGracwmKDrZAfu15yLbVhiiGAzrH00Hp2CwyLTXEGuck
-        OodrQ5Mjpn1NUN7eB1u9ftjZMQA7UCrQM8765k5Y5NgVRosIibMdHjJ9RMagCY1S46bwusteqHrqh4tv
-        gtDzJQq9AwDd/dEfH8Apf/wZ1MW1MJ0ygVBtdxDH0EgY10qKYcF25h5UP/PDk94I+PwA19+HoP7FINR0
-        /vwHOFxrCBwnAiBQ22CGtCjI05RMIKrk0Lker27jgQiefMcXhndfo7C/K/CLNB4sdzZALHlVN2G6ZBVk
-        Kq17iCoRiWGDCK/efvY+7ENSvCWnXg6OKI9HkGWFDEVJD9ElImHYAvyBLQ8+QdPbELxBq69MUY5DL6uC
-        dGlhmOgSofQulzTXE8aStg9hePQpkrIcR1VYBzyJCYguEZrhSmkDF6148hV2Px+Aut/2fjg5jmxlDfDo
-        gijRJSLRsUvwFrlau38RpyLHmb3YBXxZkZ/oElEZPZNR+wdwx45Wbq3vx6sHgcLSSnTJQW1/SJ5XHtp8
-        35eyHEeWvzPWbCKlfQFRJWee1jNtvsHdj3uBbQkklf0eY1lLTI5Wf5tohmfv0ebjsxbaQZRdCuZDH5NK
-        49GWNkA62hq+vLiPomwTiSIRmmE9FOO6ce1WZ3V7xwdgtx3p4tGmaDq9OnY68rc/BOepSExqOewD7brT
-        IFrojHXvTEXJK77SMYWoEvkuZwFHnsPCycabd/F7sXLtXIHC7OVRBTERPuPxZxx09wSEqjU1qHQsrk8K
-        uvPL4nIRurDwRL60sI8Mx0iXWadmqtdsFqgsDUKl5UJmlrUuQ2XXkuGhSSbHESjNF0nJnyPRce7kcstV
-        UvLnoLO+aQh5Myn5Oyg92/Xf5Bi0PXNEC2xffsgV5itk6N8hVFuXz6BXB9GpaCKv/hFpad8APksSVd5z
-        XhoAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="label5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
-        2AAAAdgB+lymcgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAA5BSURBVHhe1ZsJ
-        dFRFFoZfZ09n3zoJWQkBEkiAkIQ1gIRFQVBUZBER8MgiiAugCAQ3XMBRQZhR2UYBQQFl0xlFUVQQlcXd
-        UQRBznEfFQF1Rmfgzv2ru16qX1cn3U03OHXOd053v3q37r2v6ta9lTwjgJbMHGYOMY8yVzAFzJluGHMU
-        Ax2gC3SCbiFvlQxpeJe5hgmlEikMxniP0ekA3ULehANiY6Jowoh+VFqcRzabTVXiV+avTD4TrAZZkAnZ
-        YhyMibGhA3Rx/X7mHJCUYKfDO5cJ3tx0H82+digV5WdJRQCUvYtJYAJticzdzL8YIbdZQRbdct0wMaYc
-        H7q4rgfVAVD8auYeZjRTwtgYDwdIDu1YSo8vmEIVrYukQgBrs5rxt3VgPmeEnPZlzVj2VDGGdVyLA8KY
-        VswYBrpPZOBIv1oe8xkjBUt+ZHbjc2K8pwMkUHLhbePIkZYk7/s3A0V8bZOY3xjKykihP98xXmu4BLqg
-        L7OH+cn1WQVBEjb51GIYCKJsRwqNuqSW2rUqovDwMKtQys1Op7HDz6VNS2ZpFdz37Hyq7dJGvaeOaazN
-        ZkT/Xl3b0tt/W+AhF2NtXDJTjA0dZH8JdC1rkU+D+3dVH8JeJpZptK1gxLT65OWHiT7fIjjx0Tp6ac2d
-        NGfqCKFYRHi426A5WWk0dexFtPeZ+R7KXjWsr9p3BuOtzWREv/EjzvNw6p4tD/AYg8RYsh+ALtAJukFH
-        6Hry0Cb64s1HxfeE+FjZdyXj0bBmzmcuZ2YxFBZmoy3L6kzjdfzw7mp67P7raVDfTmoUpqjICLro3M60
-        ZflsN+WvHTNQ9jnFDGCsbSCDazTlqkFu90IWZEI2rgOMeWGfjkIH6KLT8feDG+jI68tp2bzJwibXvZhh
-        yF0wXjhjzGdMwWDs8L5agd449uGT9Jc5E6isZYEpA9tU324VtHXl7aYhmJKu64gl6prENoffaOjAbmb/
-        51fcRn26tTNlAoyBmPDTB09qdbHyy8frhaxhF3R3k+MCthvH8CU7ot67AGsXs+Dkoc1awd7YsX4uXdKv
-        i+nxMHbEoHM70c6n5tH+7Y9Qi6IcOcZTjGwbGLGvf8p9IAMzC/fid8iCzNfW3aMd0xu/HdhIaxZOoy6V
-        pXJMgWIrAqbzx3c7ltGq4gLqao8l3uvMzs0LmwiPY13pBvHG+88vEk9cOsIeGy1yBQRMaRjTg+mJz2Fh
-        YWKq100eytM7WlzHLILhkKUbwxtYEnNvHkWFuZlyHGFTl9hYWuhw0NNNmpi/M84PH/AT/7lXNR2vraZX
-        y5vTkKREiq1XlJIT4+jG8RfTkV3LtYN6452/L6Ca6lamnPKSQmrNEdr1fSvzAj6XtSgQ11y/U9eqUrED
-        6GR6A0F74hX91W1R2HBxfDytzc6mN/PzBQ06QGV/h3Ka4kgnhxLxEXGHDKihXRvu1Sqh49ThzbRq/hR1
-        S/JKRmoSreDAhnt0sqyc5H7bVt9JA3t1YN3qt2roPCk5mV7IzTUN99sBku+7t6fFhbnUJto5NSWV5cVC
-        2d8PbtQqZ+XbfatoAMtTZaj0rmlLX771mPZeK799uoHWLJpGVW2K3WS0jIqiW9LSaGdenofhEr8dIDne
-        s4o2tGxKvePjKFxZHnmcjMy7eTT9+N4arbIqeLK3Xj/cvFcyc9KlPj31r/esELVAtiPVvBe69LLbaWlm
-        ptZgKwE7QHKC2d2uhEalJFM8By8pI84eQxNH9udoX59AeePOaZeb98EgXR/JKea95xbSmMG9RTCV92Hs
-        yxITaRMbpDPUG6ftAJXDndtQXbaDcpVtFJEfU33b6jlag8DR958w+3tLZP7L2dzmpXUiy1MSGTHW1JQU
-        elmzvn2hQQcsadWUKjni38eR+rtzKj0M9gbixMqifKrhqahuoy2a5tCCW8bSr5885Wac6gDr0vmZk5eH
-        5lxNJcW5Zh+AGHRXejrt0hjljVc4FkxhZ5VwbJjNsQG/NeiA2tRE82J6VATN5sTlix4VHgZ743htFT3X
-        qpgGJsRTlBInsAMgHe7B+QaCJwoseQ2f8Vv3Dq1FgZOu6BDJMs6Pi6OVWVkexjXEizw7xiUlUbKyRDvE
-        xIhrDTqgp2vwiDCzA8XzlnJdfhYdqGnnYbA3TrAj3m/fiianplC6so36ChQfyet7S06Oh3EN8Sz3R1yw
-        K4ZLW6r9ccCiYTZaMdpGLTPNjhTF63A4V2Jvdyr3MNgbhypa0Ws8DS9npSAjh9cvprEOXEMf9MU9VuMa
-        AkYNSUhwm3WFyQbd29cJvvvlgMUjbESP2Ojkw1wZTrRRdaF5A6eyBvVLT6ZXOMOzGmzlMM8CDAoDcS/W
-        oqq4Cq6hD/rqrutYxUujHy8RLutM/cocBi29wKBjMw36pY4fZn/n7wE5QGXHNI7u5eaNgk5J8bSubXMP
-        wyWhcsBi3vNrOLdXA27nPIPWDzXoZzYahkuC5gDJvpk2GtmRExAlTrRLsIsd5Biv/VA54A3mvowMKlcy
-        UjigX3ODXhrtbrRK0B0gOTDHRuO6caQON4VREScqC7moOepyhNUBWbzOb05N1YJr6GN1ANJapLdFkZHm
-        OFiGF5catHe83miVkDlA8vndNrrmHC55o0yhlB8TRfe3LKADFaVuDvAF6YDXGSQ80jHAHmnQhGqDPp6s
-        N1ZHyB0g+e5PNprVz6AUuymc6rgmVx2QGM9FT1cLVWHUuzKMEuOc90gHXMfGSznJMQbdVGPQkSl6Ixvi
-        jDlAcnyBjfrw9IScCZlOY6QDKssMooPunNoRTadejaHKls69WzoAeQC+1xYZ9O1NeuN8ISAHVOYb9Owk
-        G53ibVBnZGMgNkCO1QFlLQz6bLs7B9dG0cEnoqmsqXMPtzrgyvZ6wxoDu8HTwwyqyPbDAfN53aqlbpsc
-        g1ZfaaP/PKQ31BveHOALp+sA7P+PDnLmA1JmGHMjB9pGHQA+5M9X52VSrJJOFqYZtGCIjX5dpDfYytlw
-        wNEZzgSoeWq9LNQSSJQCOhI73K0dzWzahJIi6nP5jASDbh3AFdwDesMl3hzgTx7gqwMQH5DuNmHd0B/g
-        LBCp8TOaWsJnB0i+Oac93cvlcXZ0/T6cwFH52lqDvpx79hyAHWFmd+cOgX4ARdRVXAWiGrTKlzTogIbO
-        A37oWSWuN7PHmAKiIgyRFe6//cw54B/XGDSRcwHkBLgOkCvcwNsm6n9VJr4jl8BZYZ0v5wEjlT82ejsP
-        wNE58v+KhDizLzIz1Al7ZoTOAbvHGTScx1BL9WacHeoOQTEDxlvOA3CugGsNOuBbfupzinMpM6p+uns7
-        D8DZIBzRkQsi2dfGjjiflezB2x2+B8MB3QoMOq/YmffjO0A9gLoA9YEqA+cBI/g+9TwgzXVEvt3lJJ9i
-        wI+u6d5cne4NnAe8WFkqSmRVSRAMB6jgWAyGW+/dwEYh6EUrW3gT17J41TI7/AqCcrojLsi+DZ0H7OrQ
-        mgZnppq5xJRsp7KBOABTWIzH9LHbtcdij/P2Zj0PkMsCtYS1P/DLASryKSs3ez0PgLwFnFR90LZEDBqI
-        A17idTydkxcobO2rOw+Qs8O6LKz45ACs9zs4FuzrVOb2O9jJT/kiR6rb4GfrPAAgxV2i+aPIEzw7JvLa
-        t+YCPjnghoJs8Tum+8CMFNqume67O5aJmIBsS8pp7DwgEAfgGBy/uZ0HMJgBj2mWxXL+rQdfQx/0RSxR
-        r/vkAHxXj8hB95RE2lzRwq0f+KhrGxqX63BLnb2dB/jjAN15AILcYA52GzXL4kGHgyp5Nsi+AEfh1iXk
-        kwMkb3RsLZ6yWiCVx3uZ7pw631iY7ZY6z7KcB/jjgOuV84AEdu5ofpLPWaYzZgeWRWvXvUDODswEta/E
-        LwdIcB0FUozylJvydEeK/H1P94zx6x7tRS7RLYVz8ZIiMWggDkDUr+IniD0cAVHtu4O3NkT6AmVZyMLn
-        SaXw0RGQAySHXAVSovKUHZw04bev2HBr/2CfCiOZwd6u/s+CLHw2awofHaflAAmeMp6+mjEmsFMwSw4q
-        GWOwHPA8zwAUOYnKDEziz/htawOFj46gOECC1HkeOyJX+Vc5pM6IHbgeDAes5imtpraZLB/xQaa2/hJU
-        B0iQOj/MgbFFXIwImNuqSsXvwXDACo4FWN9Y76josP7V6/4SEgdIUCCpsSBYSwBPu7EMz1dC6gArwQ6C
-        wcDqgK/woTQulhZxBvdPy5Z2ulgdEMNTGYbqwDX0CZUDUBXO4NpCyShhuzGMMd/ESIuMoOm8pamR/HSw
-        OsAXgu0AnBGMsRyOML8wQxjRHMytzDeM6CBrfxQ+OsN8xeqAojyD1i1yZ+0dkbT29kgqahLcGYDgicRI
-        rVUY2AhbYbNHi2IuZd5izJtw9IXU9ydL6usLVgf485ehQJCpMSpE1QYGL3WNY3x6ZwCtltnMnGSEEJn6
-        4pRYZ6wOqwOyMgyaPt7CiHCaflkEZaUGPgPwH2PIEOV/mbiA7rABtgTcmjFzmaOMEIxE58qcDHqnc+P/
-        KhPqGICjMJS7KJYUGSeYxUwpE7SG9wGnMUcYMRASngsdKeKkSGc8sDoAgWhQfLwWGaR8cQBOhHra7WbN
-        7wK6QceQvkDJY4q3LV5kzMHbJtjFQYi1MrQ6ANud1RgJrqGPNwfg6BvXrCdCzF4Gb4FEMGe04TU1vIfz
-        OyOUQXGEyvBId+ffEoLhgG2u9Y0aQI7DYH0/w3RlznrLYm5jvmeEgtGubXRraTNhRCAOWM/rG2Wu+t4C
-        gzdcHmSC+WZq0Focg/cD9zNCYRycduItaSgbgu84skYqqgPX0Ad9cY/lbwyQCdkY4w/fWHejN4MpKt4E
-        Ow12MshNxBte/4+tnFnK4E3UV5jjjM5QgOm9ncGbnssY3BvCZhj/AzdyYDo+cmjpAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
